// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAnnotateRequest > asks for a de translation of a zh NPC line 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "一杯热拿铁，二十八块。对吗？",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "segments": {
          "description": "The whole line, split into words, each with its reading.",
          "items": {
            "properties": {
              "base": {
                "description": "A word or run of characters from the line, exactly as written.",
                "type": "STRING",
              },
              "reading": {
                "description": "How the word is read, or empty when it needs no reading.",
                "type": "STRING",
              },
            },
            "required": [
              "base",
              "reading",
            ],
            "type": "OBJECT",
          },
          "minItems": 1,
          "type": "ARRAY",
        },
        "translation": {
          "description": "The line, translated into the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "translation",
        "segments",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHAT TO DO
The text is one line said by a member of staff in a small town, in Mandarin Chinese, to a learner who speaks German.
- translation: what the line means, in natural German. Keep its tone (polite or casual), its numbers and its prices, and translate the meaning rather than word by word.
- segments: the whole line split into words, in order. Joined together, the "base" texts must be exactly the line, including punctuation, spaces and numbers.
- reading: the pinyin of the word with tone marks (zhǎng, not zhang3), one syllable per hanzi, separated by spaces. Use the reading the word has in this sentence (长得 zhǎng de, 还钱 huán qián), and a neutral tone where it is said with one. Punctuation, numbers and Latin letters get an empty reading.
Write the translation only in German. Never add notes or explanations.",
      },
    ],
  },
}
`;

exports[`buildAnnotateRequest > asks for a en translation of a ja NPC line 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "ホットラテですね。450円です。よろしいですか？",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "segments": {
          "description": "The whole line, split into words, each with its reading.",
          "items": {
            "properties": {
              "base": {
                "description": "A word or run of characters from the line, exactly as written.",
                "type": "STRING",
              },
              "reading": {
                "description": "How the word is read, or empty when it needs no reading.",
                "type": "STRING",
              },
            },
            "required": [
              "base",
              "reading",
            ],
            "type": "OBJECT",
          },
          "minItems": 1,
          "type": "ARRAY",
        },
        "translation": {
          "description": "The line, translated into the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "translation",
        "segments",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHAT TO DO
The text is one line said by a member of staff in a small town, in Japanese, to a learner who speaks British English.
- translation: what the line means, in natural British English. Keep its tone (polite or casual), its numbers and its prices, and translate the meaning rather than word by word.
- segments: the whole line split into words, in order. Joined together, the "base" texts must be exactly the line, including punctuation, spaces and numbers.
- reading: for a word with kanji, the whole word in hiragana, read as it is in this sentence (一日中 いちにちじゅう, この方 このかた). Words with no kanji, punctuation and numbers get an empty reading.
Write the translation only in British English. Never add notes or explanations.",
      },
    ],
  },
}
`;

exports[`buildAnnotateRequest > asks for a ja translation of a en NPC line 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "One hot latte, that's £3.40. Is that right?",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "translation": {
          "description": "The line, translated into the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "translation",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHAT TO DO
The text is one line said by a member of staff in a small town, in British English, to a learner who speaks Japanese.
- translation: what the line means, in natural Japanese. Keep its tone (polite or casual), its numbers and its prices, and translate the meaning rather than word by word.
Write the translation only in Japanese. Never add notes or explanations.",
      },
    ],
  },
}
`;

exports[`buildAnnotateRequest > asks for a zh translation of a de NPC line 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "Einmal Latte macchiato für 3,40 €, richtig?",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "translation": {
          "description": "The line, translated into the Native Language.",
          "type": "STRING",
        },
      },
      "required": [
        "translation",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHAT TO DO
The text is one line said by a member of staff in a small town, in German, to a learner who speaks Mandarin Chinese.
- translation: what the line means, in natural Mandarin Chinese. Keep its tone (polite or casual), its numbers and its prices, and translate the meaning rather than word by word.
Write the translation only in Mandarin Chinese. Never add notes or explanations.",
      },
    ],
  },
}
`;
